fixed stretched images and description alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -246,9 +246,9 @@ button:hover {
 .container:hover .overlay{
     opacity: 1;
 }
-.card-img-top {
+/* .card-img-top {
     height: 100%;
-}
+} */
 #team1 {
     max-height: 235px
 }
@@ -286,9 +286,9 @@ button:hover {
     font-size: 35px;
 }
 
-#p4p_logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 31%;
-}
+#description {
+  margin-left: 100px;
+  margin-right: 100px;
+  padding: 20px;
+  box-sizing: border-box;
+ }
